# M5StickCPlus2_Remote_For_DJI_Osmo

./: CMakeLists.txt  LICENSE  README.md  sdkconfig  sdkconfig.defaults.esp32  sdkconfig.defaults.m5stickc_plus2  sdkconfig.old
ble/: ble.c  ble.h
data/: data.c  data.h
logic/: command_logic.c  command_logic.h  connect_logic.c  connect_logic.h  enums_logic.c  enums_logic.h  light_logic.c  light_logic.h  status_logic.c  status_logic.h
main/: CMakeLists.txt  app_main.c  icons.c  icons.h  idf_component.yml  m5stickc_plus2_hal.c  m5stickc_plus2_hal.h  ui.c  ui.h
protocol/: dji_protocol_data_descriptors.c  dji_protocol_data_descriptors.h  dji_protocol_data_processor.c  dji_protocol_data_processor.h  dji_protocol_data_structures.c  dji_protocol_data_structures.h  dji_protocol_parser.c  dji_protocol_parser.h
utils/crc/: custom_crc16.c  custom_crc16.h  custom_crc32.c  custom_crc32.h
